# definet

./: .gitignore  pyproject.toml
definet/: __init__.py  __main__.py  rgb.py
